somes improves Dagger2

--- a/cabify/build.gradle
+++ b/cabify/build.gradle
@@ -40,11 +40,16 @@ dependencies {
     final SUPPORT_LIBRARY_VERSION = '24.2.1'
     final PLAY_SERVICES_VERSION = '9.6.1'
     final RETROFIT2_VERSION = '2.1.0'
+    final DAGGER2_VERSION = '2.7'
 
     compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
+
+    //Dagger
+    compile "com.google.dagger:dagger:$DAGGER2_VERSION"
+    annotationProcessor "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
 
     //Butterknife
     compile 'com.jakewharton:butterknife:8.4.0'
